--- a/Question1-HTML.html
+++ b/Question1-HTML.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<html lang="">
+<html lang="en"> <!-- o	The lang attribute is empty, which is required for accessibility. -->
 <head>
+  <title>Wikivoyage Instructions</title>
 </head>
 <body>
-<img src="lab2/send.jpg" width="150" />
-Wikivoyage</h1>
-<p>How to edit a page
+<img src="lab2/send.jpg" alt="Send button icon" width="150" />
+<h1>Wikivoyage</h1> <!--o	There is a closing </h1> tag without a corresponding opening <h1> tag.-->
+<p>How to edit a page</p> <!--Add a closing </p> tag-->
 
 <ul>
-  <li>If you are logged in to a user account there will be a <strong>"This is a minor edit"
+  <li>If you are logged in to a user account there will be a <strong>"This is a minor edit" </strong></li>
 
-  <li>If you are starting a new page from the beginning, please make use of our <strong>strong <em>article skeletons</strong</em>
+  <li>If you are starting a new page from the beginning, please make use of our <strong> article skeletons </strong></li>
 
   <li>To view article history, click on the "history" tab for any article. Let's
-      look at an example on <href= "https://en.wikivoyage.org/wiki/File:Be_bold2.svg>Wikipedia homepage</a>
-</ul>
+      look at an example on <a href="https://en.wikivoyage.org/wiki/File:Be_bold2.svg">Wikipedia homepage</a> </li>
+</ul> <!--Add closing </li> tags for each <li> element-->
 </body>
 </html>
