--- a/Question2-CSS.html
+++ b/Question2-CSS.html
@@ -1,30 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-   <title>Question 2 - CSS</title>
-   <style>
-    .mainsection a {
-      text-decoration: none;
-      color: #414040;
-      outline: none;
-    }
-
-    
+  <head>
+    <title>Question 2 - CSS</title>
+    <style>
+       /* Ensure links are highlighted */
+       .mainsection a {
+          text-decoration: none;
+          color: #004080; /* Updated to improve contrast */
+          outline: none;
+       }
+ 
+       /* Add a focus style for accessibility */
+       .mainsection a:focus, .mainsection a:hover {
+          text-decoration: underline;
+          color: #002060;
+          background-color: #e0f0ff; /* Adds a light background for focus */
+       }
+ 
+       /* Style for list items */
+       .mainsection ul {
+          list-style-type: disc;
+          padding-left: 20px;
+          
+       }
+       h1{
+            background-image: url('https://github.com/Satkirat-kaur/CST8914-lab2/blob/main/lab2/backgroundimg.gif') ;
+          }
     </style>
-</head>
-<body>
-<div class="mainsection">
-<h1><img src="lab2/lab2-imageoftext.gif" alt="Shopping categories"></h1>
+ </head>
+ <body>
+ <div class="mainsection">
+    <!-- Replace image with accessible text -->
+    <h1>Shopping Categories</h1>
+ 
+    <ul>
+       <li><a href="#">Animals</a></li>
+       <li><a href="#">Computers</a></li>
+       <li><a href="#">Diversity and Inclusion</a></li>
+       <li><a href="#">Food</a></li>
+       <li><a href="#">Medicine</a></li>
+       <li><a href="#">Music</a></li>
+    </ul>
+ </div>    
+ </body>
+ </html>
+ 
 
-<ul>
-  <li><a href="#">Animals</a></li>
-  <li><a href="#">Computers</a></li>
-  <li><a href="#">Diversity and inclusion</a></li>
-  <li><a href="#">Food</a></li>
-  <li><a href="#">Medicine</a></li>
-  <li><a href="#">Music</a></li>
-</ul>
-</div>    
-
-</body>
-</html>
