--- a/Question4-JS.html
+++ b/Question4-JS.html
@@ -5,18 +5,49 @@
     <title>Question 4 - JavaScript</title>
 
 </head>
+<style>
+    body {
+        font-family: Arial, sans-serif;
+        padding: 20px;
+    }
+
+    button {
+        padding: 10px 20px;
+        font-size: 16px;
+        background-color: #4CAF50;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+    }
+
+    button:hover {
+        background-color: #45a049;
+    }
+
+    #demo {
+        margin-top: 20px;
+        font-size: 18px;
+        font-weight: bold;
+        color: #333;
+    }
+</style>
 
 <body>
     <h1>HTML DOM Events</h1>
     <p>Trigger a function on hover that will output "Hello World":</p>
 
-    <button onmouseover="myFunction()">Action!</button>
+    <button id="hoverButton">Action!</button>
     <p id="demo"></p>
+    
 </body>
+
 <script>
-    function myFunction() {
+    // Attach event listener using JavaScript
+    document.getElementById("hoverButton").addEventListener("mouseover", function () {
         document.getElementById("demo").innerHTML = "Hello World";
-    }
+    });
 </script>
+
 
 </html>
