--- a/Question2-CSS.html
+++ b/Question2-CSS.html
@@ -24,7 +24,7 @@
           
        }
        h1{
-            background-image: url('https://github.com/Satkirat-kaur/CST8914-lab2/blob/main/lab2/backgroundimg.gif') ;
+            background-image: url('lab2/backgroundimg.gif') ;
           }
     </style>
  </head>
