--- a/Question2-CSS.html
+++ b/Question2-CSS.html
@@ -13,8 +13,9 @@
        /* Add a focus style for accessibility */
        .mainsection a:focus, .mainsection a:hover {
           text-decoration: underline;
+          font-weight: bold;
           color: #002060;
-          background-color: #e0f0ff; /* Adds a light background for focus */
+          background-color: #b3d7f9; /* Adds a light background for focus */
        }
  
        /* Style for list items */
